fix weird alignment on footer list items; give the header more room to fit the hamburger menu

--- a/main.css
+++ b/main.css
@@ -375,6 +375,7 @@ footer ul {
 footer li {
   display: inline-block;
   margin: 0 1em;
+  text-align: right;
 }
 
 footer a {
